/***
* LO21: Shotten-Totten Project
* @author: Roussel Pierre
* @author: Santamaria Gabriel
* @licence: TODO
*/

#ifndef LO21_PROJECT_BORDER_H
#define LO21_PROJECT_BORDER_H

#include "../Constants/Constants.h"
#include "Combo.h"

class Border {
protected:
  unsigned int id;
  Combo combo;
  Rules rules;
};

#endif//LO21_PROJECT_BORDER_H
