//
// Created by Pierre Roussel on 4/17/23.
//

#ifndef LO21_PROJECT_CARD_H
#define LO21_PROJECT_CARD_H

#include <string>

class Card {
protected:
  std::string name;
  std::string description;
public:
};


#endif //LO21_PROJECT_CARD_H
