/***
* LO21: Shotten-Totten Project
* @author: Roussel Pierre
* @author: Santamaria Gabriel
* @licence: TODO
*/

#ifndef LO21_PROJECT_COMBATMODE_H
#define LO21_PROJECT_COMBATMODE_H

#include "TacticCard.h"

class CombatMode : public TacticCard {
};

#endif//LO21_PROJECT_COMBATMODE_H
