/***
* LO21: Shotten-Totten Project
* @author: Roussel Pierre
* @author: Santamaria Gabriel
* @licence: TODO
*/

#ifndef LO21_PROJECT_DECK_H
#define LO21_PROJECT_DECK_H

class Deck {
};

#endif//LO21_PROJECT_DECK_H
