/***
* LO21: Shotten-Totten Project
* @author: Roussel Pierre
* @author: Santamaria Gabriel
* @licence: TODO
*/

#ifndef LO21_PROJECT_ELITETROOPS_H
#define LO21_PROJECT_ELITETROOPS_H

#include "TacticCard.h"

class EliteTroops : public TacticCard {
};

#endif//LO21_PROJECT_ELITETROOPS_H
