/***
* LO21: Shotten-Totten Project
* @author: Roussel Pierre
* @author: Santamaria Gabriel
* @licence: TODO
*/

#ifndef LO21_PROJECT_RUSE_H
#define LO21_PROJECT_RUSE_H

#include "TacticCard.h"

class Ruse : public TacticCard {
};

#endif//LO21_PROJECT_RUSE_H
